--- a/style.css
+++ b/style.css
@@ -1,27 +1,52 @@
-.carousel{
-    margin-top: 40px !important;
-    width: 40rem;
- }
- .navbar{
-   z-index: 100;
- }
- 
+body{
+  background: rgb(64, 60, 199);
+
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+.carousel {
+  width: 100%;
+  overflow: hidden;
+  margin-top: 40px !important;
+  width: 40rem;
+}
+.card {
+  margin-right: auto;
+  margin-left: auto;
+}
+body, html {
+  overflow-x: hidden;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-image: none; /* Remove default icon */
+    margin-bottom: 30px;
+
+}
+
+.carousel-control-prev-icon:after {
+    content: '❮'; 
+    color: rgb(0, 0, 0); 
+    font-size: 30px; 
+    margin-right: 30px;
+}
+
+.carousel-control-next-icon:after {
+    content: '❯';
+    color: rgb(22, 22, 22); 
+    font-size: 30px;
+}
+
  span{
      color: rgb(241, 158, 3);
-     font-family: ShowGothicCard;
+     font-family: ShowCardGothic;
  }
  header{
      background: rgb(14, 14, 20);
      position: sticky;
- }
- 
- body{
-     background: rgb(64, 60, 199);
-     width: fit-content;
-     block-size: fit-content;
-     overflow-x: hidden !important;
-
-  
  }
 
  .nav-item{
@@ -50,39 +75,27 @@
    z-index: -100;
  }
  .ads{
-     padding: 20px;
-     margin-left: 10px;
+     padding: 10px;
+     margin-right: 80px ;
+    
    }
    .card-content{
      z-index: -100;
+     
    }
- .ads-btn{
-   margin-left: 65px;
-   margin-bottom: 5px;
-   
- }
- .carousel-control-next-icon{
-   background-color: rgb(39, 35, 35);
-   border-radius: 10px;
-   margin-left: 40px;
- }
- .carousel-control-prev-icon{
-   background-color: rgb(39, 35, 35);
-   border-radius: 10px;
-   margin-right: 40px;
- 
- }
+
  .last-content-title{
      z-index: -100;
  }
+ .card3{
+  margin-left: 47px;
+}
  
  
  @media only screen and (min-width: 1400px ) and (max-width: 1505px){
-     .ads{ 
-         
-         width: 25rem;
-         margin-left: 34px;
-       }
+    .card-content{
+      margin-left: 20px;
+    }
  }
  
  @media only screen and (max-width: 1200px){
@@ -98,30 +111,45 @@
          align-items: center;
        }
        .card1{
-         margin-top: 50px;
+         margin-top: 23px;
+       }
+       .card2{
+        margin-top:20px;
        }
        .card3{
-         margin-top: 20px;
+         margin-bottom: 30px;
        }
+    
  }
- @media only screen and (max-width: 992px){
+
+
+ @media only screen and (max-width: 993px){
      .card-content{
-        width: 22rem;
+        width: 300px;
        }
-       .card1{
-         margin-top: 28px;
-       }
-       .card3{
-     
-             margin-left: 195px;
-           }
+   
        
  }
- @media only screen and (max-width: 768px){
-   
+ @media only screen and (max-width: 768px) and (min-width: 563px){
      .carousel{
-         width: 30rem;
+         width: 40rem;
       }
+      .card1 {
+        margin-left: 10px;
+        margin-top: 5px;
+      
+      }
+      .card2 {
+        margin-top: 5px;
+        margin-left: 90px !important;
+      }
+      .card3 {
+        margin-top: 20px;
+        margin-left: 210px !important;
+      }
+      .ads{
+        margin-left: 90px;
+       }
       
  }
  @media only screen and (max-width: 562px){
@@ -136,17 +164,14 @@
          text-align: center;
         }
         .card1{
-         
-         margin-left: 80px;
-         margin-bottom: 30px;
+         margin-left: 128px;
         }
         .card2{
-         
-         margin-left: 80px;
-         margin-bottom: 15px;
+          margin-left: 128px;
+          margin-bottom: 20px;
         }
         .card3{
-        margin-left: 90px;
+          margin-left: 128px;
         }
         .ads{
          margin-left: 160px;
@@ -160,30 +185,19 @@
       .par{
          font-size: 10px;
       }
-      .carousel-control-next-icon{
-       background-color: rgb(39, 35, 35);
-       border-radius: 10px;
-       margin-left: 25px;
-      
-   }
-   .carousel-control-prev-icon{
-       background-color: rgb(39, 35, 35);
-       border-radius: 10px;
-       margin-right: 25px;
+
    
-   }
       .card1{
-         
-         margin-left: 15px;
-         margin-bottom: 30px;
+          margin-left: 60px;
         }
         .card2{
          
-         margin-left: 16px;
+         margin-left: 60px;
          margin-bottom: 15px;
         }
         .card3{
-        margin-left: 28px;
+        margin-left: 60px;
+        margin-bottom: 15px;
         }
         .ads{
          margin-left: 88px;
@@ -192,34 +206,50 @@
          text-align: center;
         }
         
-     }
      .nav-item{
        font-size: 16px;
      }
-  
-     @media only screen and (max-width: 376px){
-   
+    }
+     @media only screen and (max-width: 390px) and (min-width: 376px){
+      .card1{
+        margin-left: 40px;
+      }
+      .card2{
+       
+        margin-left: 40px;
+       margin-bottom: 15px;
+      }
+      .card3{
+        margin-left: 40px;
+      margin-bottom: 15px;
+      }
        .par{
          font-size: 10px;
       }
-      .card1{
-         
-         margin-right: 80px;
-         margin-bottom: 30px;
-        }
-        .card2{
-         
-         margin-left: 16px;
-         margin-bottom: 15px;
-        }
-        .card3{
-        margin-left: 28px;
-        }
-        .ads{
-         margin-left: 102px;
-        }
+       .card-content{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       }
+    
         .last-content-title{
          text-align: center;
         }
         
+     }
+     @media only screen and (max-width: 320px){
+      .card1{
+        margin-left: 6px;
+      }
+      .card2{
+        margin-left: 6px;
+      }
+      .card3{
+        margin-left: 6px;
+
+      }
+      .carousel{
+    
+        width: 15rem;
+     }
      }
