--- a/style.css
+++ b/style.css
@@ -1,255 +1,61 @@
-body{
-  background: rgb(64, 60, 199);
-
-}
-img {
-  max-width: 100%;
-  height: auto;
-}
-.carousel {
-  width: 100%;
-  overflow: hidden;
-  margin-top: 40px !important;
-  width: 40rem;
-}
-.card {
-  margin-right: auto;
-  margin-left: auto;
-}
 body, html {
-  overflow-x: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  
+ }
+body{
+  background-color: rgb(10, 10, 98);
+}
+header{
+  padding: 30px;
+  
+}
+#carouselExample{
+  width: 50%;
+  margin:auto;
+  margin-top: 4.3%;
 }
 
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-    background-image: none; /* Remove default icon */
-    margin-bottom: 30px;
-
+.navbar-nav{
+  margin-right: 2rem;
+}
+.card{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: 15px;
 }
 
-.carousel-control-prev-icon:after {
-    content: '❮'; 
-    color: rgb(0, 0, 0); 
-    font-size: 30px; 
-    margin-right: 30px;
-}
 
-.carousel-control-next-icon:after {
-    content: '❯';
-    color: rgb(22, 22, 22); 
-    font-size: 30px;
-}
-
- span{
-     color: rgb(241, 158, 3);
-     font-family: ShowCardGothic;
- }
- header{
-     background: rgb(14, 14, 20);
-     position: sticky;
- }
-
- .nav-item{
-   display: flex;
-   justify-content: center;
-   align-items: center;
- }
- .nav-item{
-   margin: 0 9px;
- }
- .nav-item:hover{
- 
-    background-color: rgb(112, 124, 124);
- }
- 
- .paragraph{
-     margin-bottom: 19px !important;
- }
- .webnav{
-     z-index: -100;
- }
- .web-content{
-   z-index: -100;
- }
- .web-resource{
-   z-index: -100;
- }
- .ads{
-     padding: 10px;
-     margin-right: 80px ;
-    
-   }
-   .card-content{
-     z-index: -100;
+@media (max-width: 431px){
+  .card1{
+   margin-left: 55px;
      
-   }
-
- .last-content-title{
-     z-index: -100;
- }
- .card3{
-  margin-left: 47px;
+  }
+  .card2{
+      margin-left: 55px;
+        
+     }
+     .card3{
+      margin-left: 55px;
+        
+     }
 }
- 
- 
- @media only screen and (min-width: 1400px ) and (max-width: 1505px){
-    .card-content{
-      margin-left: 20px;
-    }
- }
- 
- @media only screen and (max-width: 1200px){
-     .ads{ 
-         display: flex;
-         align-items: center;
-         justify-content: center;
-         padding-left: 0;
-       }
-       .card-content{
-         display: flex;
-         justify-content: center;
-         align-items: center;
-       }
-       .card1{
-         margin-top: 23px;
-       }
-       .card2{
-        margin-top:20px;
-       }
-       .card3{
-         margin-bottom: 30px;
-       }
-    
- }
+@media (max-width: 576px){
+  .card{
+      margin-top: 4.4%;
+    margin-left: 13px;
+     
+  }
+}
+@media (max-width: 768px){
 
-
- @media only screen and (max-width: 993px){
-     .card-content{
-        width: 300px;
-       }
-   
-       
- }
- @media only screen and (max-width: 768px) and (min-width: 563px){
-     .carousel{
-         width: 40rem;
-      }
-      .card1 {
-        margin-left: 10px;
-        margin-top: 5px;
-      
-      }
-      .card2 {
-        margin-top: 5px;
-        margin-left: 90px !important;
-      }
-      .card3 {
-        margin-top: 20px;
-        margin-left: 210px !important;
-      }
-      .ads{
-        margin-left: 90px;
-       }
-      
- }
- @media only screen and (max-width: 562px){
-   
-     .carousel{
-         width: 25rem;
-      }
-      .par{
-         font-size: 13px;
-      }
-      .last-content-title{
-         text-align: center;
-        }
-        .card1{
-         margin-left: 128px;
-        }
-        .card2{
-          margin-left: 128px;
-          margin-bottom: 20px;
-        }
-        .card3{
-          margin-left: 128px;
-        }
-        .ads{
-         margin-left: 160px;
-        }
- }
- @media only screen and (max-width: 426px){
-     .carousel{
-    
-         width: 20rem;
-      }
-      .par{
-         font-size: 10px;
-      }
-
-   
-      .card1{
-          margin-left: 60px;
-        }
-        .card2{
-         
-         margin-left: 60px;
-         margin-bottom: 15px;
-        }
-        .card3{
-        margin-left: 60px;
-        margin-bottom: 15px;
-        }
-        .ads{
-         margin-left: 88px;
-        }
-        .last-content-title{
-         text-align: center;
-        }
-        
-     .nav-item{
-       font-size: 16px;
-     }
-    }
-     @media only screen and (max-width: 390px) and (min-width: 376px){
-      .card1{
-        margin-left: 40px;
-      }
-      .card2{
-       
-        margin-left: 40px;
-       margin-bottom: 15px;
-      }
-      .card3{
-        margin-left: 40px;
-      margin-bottom: 15px;
-      }
-       .par{
-         font-size: 10px;
-      }
-       .card-content{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-       }
-    
-        .last-content-title{
-         text-align: center;
-        }
-        
-     }
-     @media only screen and (max-width: 320px){
-      .card1{
-        margin-left: 6px;
-      }
-      .card2{
-        margin-left: 6px;
-      }
-      .card3{
-        margin-left: 6px;
-
-      }
-      .carousel{
-    
-        width: 15rem;
-     }
-     }
+  .card{
+      margin-top: 4.4%;
+    margin-left: 13px;
+     
+  }
+}
