--- a/style.css
+++ b/style.css
@@ -29,8 +29,11 @@ header{
   margin-right: 15px;
 }
 
-
 @media (max-width: 431px){
+  #carouselExample{
+     margin-top: 50px;
+     width: 15rem;
+  }
   .card1{
    margin-left: 55px;
      
@@ -45,6 +48,10 @@ header{
      }
 }
 @media (max-width: 576px){
+  #carouselExample{
+    margin-top: 50px;
+    width: 20rem;
+ }
   .card{
       margin-top: 4.4%;
     margin-left: 13px;
